Add a new message creation form

--- a/app/views/messages/index.html.erb
+++ b/app/views/messages/index.html.erb
@@ -6,4 +6,10 @@
   </p>
 <% end %>
 
-<%= link_to 'Go to users', users_path %>
+<p>
+  <%= link_to 'Send new message', new_message_path %>
+</p>
+
+<p>
+  <%= link_to 'Go to users', users_path %>
+</p>
