--- a/app/views/messages/index.html.erb
+++ b/app/views/messages/index.html.erb
@@ -2,9 +2,7 @@
 
 <%= render @messages %>
 
-<p>
-  <%= link_to 'Send new message', new_message_path %>
-</p>
+<%= turbo_frame_tag 'new_message', src: new_message_path, target: '_top' %>
 
 <p>
   <%= link_to 'Go to users', users_path %>
