Submit new message form without reloading the page and reset the form with turbo-stream response from the server. Though, messages list does not get updated yet

--- a/app/views/messages/index.html.erb
+++ b/app/views/messages/index.html.erb
@@ -2,7 +2,7 @@
 
 <%= render @messages %>
 
-<%= turbo_frame_tag 'new_message', src: new_message_path, target: '_top' %>
+<%= render template: 'messages/new' %>
 
 <p>
   <%= link_to 'Go to users', users_path %>
