--- a/app/views/messages/new.html.erb
+++ b/app/views/messages/new.html.erb
@@ -1,7 +1,5 @@
-<h3>Send new message</h3>
-
-<%= turbo_frame_tag 'new_message', target: '_top' do %>
-    <%= form_with model: @message do |form| %>
+<%= turbo_frame_tag 'new_message' do %>
+    <%= form_with model: Message.new do |form| %>
         <div>
             <%= form.label :user_id, 'Author' %><br>
             <%= form.collection_select :user_id, User.all, :id, :name  %>
