Stream new messages over a cable. Now inter-browser-tab chatting really works without reloading! All updates are done via cable. Even if you create a message in console, it will appear immediately in all open windows!

--- a/app/views/messages/index.html.erb
+++ b/app/views/messages/index.html.erb
@@ -1,6 +1,10 @@
 <h2>Messages</h2>
 
-<%= render @messages %>
+<%= turbo_stream_from 'messages_stream' %>
+
+<%= turbo_frame_tag 'messages' do %>
+    <%= render @messages %>
+<% end %>
 
 <%= render template: 'messages/new' %>
 
