Bootstrapify the input forms, yaaaay!

--- a/app/views/messages/new.html.haml
+++ b/app/views/messages/new.html.haml
@@ -1,11 +1,6 @@
 = turbo_frame_tag 'new_message' do
   .py-3.px-3
-    = form_with model: Message.new do |form|
-      .mb-3
-        = form.label :user_id, 'Author', class: 'form-label'
-        = form.collection_select :user_id, User.all, :id, :name, {}, { class: 'form-select form-select-sm' }
-      .mb-3
-        = form.label :content, class: 'form-label'
-        = form.text_field :content, class: 'form-control'
-
-      = form.submit class: 'btn btn-primary'
+    = bootstrap_form_with model: Message.new do |form|
+      = form.collection_select :user_id, User.all, :id, :name, { label: 'Author' }, control_class: 'form-select form-select-sm'
+      = form.text_field :content, required: true
+      = form.primary "Send"
