--- a/app/views/users/index.html.haml
+++ b/app/views/users/index.html.haml
@@ -6,11 +6,9 @@
 
 .container.py-3
   %h3 Add new user
-  = form_with(model: User.new) do |form|
-    .mb-3
-      = form.label :name, 'Name', class: 'form-label'
-      = form.text_field :name, class: 'form-control'
-    = form.submit class: 'btn btn-primary'
+  = bootstrap_form_with(model: User.new) do |form|
+    = form.text_field :name, required: true
+    = form.primary
 
 .container.py-3
   = link_to 'Go to messages', messages_path
