--- a/app/views/users/index.html.haml
+++ b/app/views/users/index.html.haml
@@ -1,5 +1,11 @@
 .container
   .py-3
+    - flash.each do |_, flash_text|
+      .alert.alert-primary.alert-dismissible.fade.show{:role => "alert"}
+        = flash_text
+        %button.btn-close{ type: "button", "data-bs-dismiss" => "alert", "aria-label" => "Close"}
+
+  .py-3
     %h2 Users
     %ul.list-group
       - @users.each do |user|
