Now messages index now reacts to messages updates, deletes and creation. This commit updates the code according to Rails conventions.

--- a/app/views/messages/_message.html.haml
+++ b/app/views/messages/_message.html.haml
@@ -1,4 +1,5 @@
-%p
-  "#{message.content}" by
-  %strong
-    = message.user.name
+= turbo_frame_tag message do
+  %p
+    "#{message.content}" by
+    %strong
+      = message.user.name
