--- a/app/views/application/_flash_alerts.html.haml
+++ b/app/views/application/_flash_alerts.html.haml
@@ -1,5 +1,5 @@
 .py-3
-  - flash.each do |_, flash_text|
+  - flash.each do |_, flash_text| # rubocop:disable Style/HashEachMethods
     .alert.alert-primary.alert-dismissible.fade.show{ role: 'alert' }
       = flash_text
       %button.btn-close{ type: 'button', 'data-bs-dismiss': 'alert', 'aria-label': 'Close' }
